# tonic_include_proto

./: CHANGELOG  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yaml
proto/: x.proto  xy.proto  xz.proto
src/: lib.rs
